syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = "./proto";

service ReviewsService {
    rpc GetReviewsFromRestaurant(GetReviewsFromRestaurantRequest) returns (GetReviewsFromRestaurantResponse) {}
    rpc GetReviewsFromUser(google.protobuf.Empty) returns (GetReviewsFromUserResponse) {}
}

message Review {
    int64 order_id = 1;
    int64 user_id = 2;
    int64 rate = 3;
    string description = 4;
    string created_at = 5;
}

message GetReviewsFromRestaurantRequest {
    int64 restaurant_id = 1;
}

message GetReviewsFromRestaurantResponse {
    repeated Review reviews = 1;
}

message GetReviewsFromUserResponse {
    repeated Review reviews = 1;
}